# KeenKenning

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE_UPDATE_INSTRUCTIONS.md  SUMMARY.md  THIRD_PARTY_LICENSES  build.gradle  gradle.properties  gradlew  gradlew.bat  installation_requirements.md  pyproject.toml  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/yegie/keenkeenforandroid/: AiIntegrationTest.kt
app/src/androidTest/java/org/yegie/keenkenning/: AiIntegrationTest.kt  ClassikGameFlowTest.kt  KeenActivityRecreateTest.kt  KeenBenchmarkTest.kt  PerfMetrics.kt  PuzzleFlowSmokeTest.kt
app/src/androidTest/java/org/yegie/orthogon/: AiIntegrationTest.kt
app/src/androidTestKenning/java/org/yegie/keenkenning/: AiIntegrationTest.kt  KenningStoryActivityTest.kt  KenningStoryMenuIntentTest.kt
app/src/classik/java/org/yegie/keenkenning/: FlavorServices.java  NeuralKeenGenerator.java  StoryActivity.kt
app/src/classik/java/org/yegie/keenkenning/data/: NarrativeGenerator.kt  SkillModelInference.kt  StoryManager.kt
app/src/kenning/: AndroidManifest.xml
app/src/kenning/java/org/yegie/keenkenning/: FlavorServices.java  NeuralKeenGenerator.java  StoryActivity.kt
app/src/kenning/java/org/yegie/keenkenning/data/: NarrativeGenerator.kt  SkillModelInference.kt  StoryManager.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: keen_solver_9x9.onnx  narrative_model.onnx  phrase_database.json  skill_model.onnx  smollm_vocab.json
app/src/main/java/org/yegie/keenkeenforandroid/: ApplicationCore.java  GitHubLogger.java  KeenActivity.kt  KeenModel.java  KeenModelBuilder.java  MenuActivity.kt  NeuralKeenGenerator.java  PuzzleGenerator.kt  SoundManager.java
app/src/main/java/org/yegie/keenkeenforandroid/data/: GameMode.kt  GenerationResult.kt  JniResultParser.kt  LatinSquareProvider.kt  PuzzleParser.kt  PuzzleRepository.kt  SaveManager.kt  StoryManager.kt  UserStatsManager.kt
app/src/main/java/org/yegie/keenkeenforandroid/ui/: AccessibilityUtils.kt  GameScreen.kt  GameUiState.kt  GameViewModel.kt  MenuScreen.kt  RenderableGameState.kt  VictoryAnimation.kt
app/src/main/java/org/yegie/keenkeenforandroid/ui/theme/: ColorSystem.kt  DesignTokens.kt  GameTheme.kt
app/src/main/java/org/yegie/keenkenning/: ApplicationCore.java  ClassikNeuralKeenGenerator.java  GitHubLogger.java  KeenActivity.kt  KeenModel.java  KeenModelBuilder.java  MenuActivity.kt  PuzzleGenerator.kt  SoundManager.java  StoryActivity.kt  StoryModeUnavailable.kt
app/src/main/java/org/yegie/keenkenning/data/: ClassikNarrativeGenerator.kt  ClassikSkillModelInference.kt  ClassikStoryManager.kt  GameMode.kt  GenerationResult.kt  JniResultParser.kt  KeenHints.kt  KeenValidator.kt  LatinSquareProvider.kt  PuzzleParser.kt  PuzzleRepository.kt  SaveManager.kt  UserStatsManager.kt
app/src/main/java/org/yegie/keenkenning/perf/: PerfTrace.kt
app/src/main/java/org/yegie/keenkenning/ui/: AccessibilityUtils.kt  DpadNavigation.kt  GameScreen.kt  GameUiState.kt  GameViewModel.kt  MenuScreen.kt  RenderableGameState.kt  StoryBookUI.kt  VictoryAnimation.kt
app/src/main/java/org/yegie/keenkenning/ui/theme/: ColorSystem.kt  DesignTokens.kt  GameTheme.kt  RetroTheme.kt
app/src/main/java/org/yegie/orthogon/: ApplicationCore.java  GitHubLogger.java  KenKenActivity.kt  KenKenModel.java  KenKenModelBuilder.java  MenuActivity.kt  NeuralKenKenGenerator.java  PuzzleGenerator.kt  SoundManager.java  StoryActivity.kt
app/src/main/java/org/yegie/orthogon/data/: GameMode.kt  GenerationResult.kt  JniResultParser.kt  KenKenHints.kt  KenKenValidator.kt  LatinSquareProvider.kt  NarrativeGenerator.kt  PuzzleParser.kt  PuzzleRepository.kt  SaveManager.kt  SkillModelInference.kt  StoryManager.kt  UserStatsManager.kt
app/src/main/java/org/yegie/orthogon/ui/: AccessibilityUtils.kt  DpadNavigation.kt  GameScreen.kt  GameUiState.kt  GameViewModel.kt  MenuScreen.kt  RenderableGameState.kt  StoryBookUI.kt  VictoryAnimation.kt
app/src/main/java/org/yegie/orthogon/ui/theme/: ColorSystem.kt  DesignTokens.kt  GameTheme.kt
app/src/main/jni/: dlx.c  dlx.h  dsf.c  jni_error_codes.h  keen-android-jni.c  keen.c  keen.h  keen_generate.c  keen_hints.c  keen_hints.h  keen_internal.h  keen_modes.h  keen_solver.c  keen_solver.h  keen_validate.c  keen_validate.h  kenken-android-jni.c  kenken.c  kenken.h  kenken_hints.c  kenken_hints.h  kenken_modes.h  kenken_validate.c  kenken_validate.h  latin.c  latin.h  malloc.c  maxflow.h  maxflow_optimized.c  puzzles.h  random.c  tree234.c  tree234.h
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_menu.xml  menu_spinner_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/org/yegie/keenkeenforandroid/data/: DeterministicSeedingTest.kt  JniResultParserTest.kt  PuzzleInvariantsTest.kt  PuzzleParserTest.kt
app/src/test/java/org/yegie/keenkeenforandroid/performance/: GenerationPerformanceTest.kt
app/src/test/java/org/yegie/keenkeenforandroid/ui/: AccessibilityUtilsTest.kt  GameViewModelTest.kt
app/src/test/java/org/yegie/keenkenning/data/: DeterministicSeedingTest.kt  JniResultParserTest.kt  PuzzleInvariantsTest.kt  PuzzleParserTest.kt
app/src/test/java/org/yegie/keenkenning/performance/: GenerationPerformanceTest.kt
app/src/test/java/org/yegie/keenkenning/ui/: AccessibilityUtilsTest.kt  GameViewModelTest.kt
app/src/test/java/org/yegie/orthogon/data/: DeterministicSeedingTest.kt  JniResultParserTest.kt  PuzzleInvariantsTest.kt  PuzzleParserTest.kt
app/src/test/java/org/yegie/orthogon/performance/: GenerationPerformanceTest.kt
app/src/test/java/org/yegie/orthogon/ui/: AccessibilityUtilsTest.kt  GameViewModelTest.kt
core/: build.gradle
scripts/perf/: CMakeLists.txt  android_pgo.sh  common.sh  emulator_wait_ready.sh  gradle_native_instrument.sh  host_bolt.sh  host_build.sh  host_coverage.sh  host_ctest.sh  host_flamegraph.sh  host_infer.sh  host_perf_record.sh  host_pgo.sh  host_valgrind.sh
(+82 files in other folders)
